# localstoragesync

./: Cargo.toml  config.toml
src/: app.rs  db.rs  lib.rs  main.rs  settings.rs
src/api/: error.rs  mod.rs
src/api/routes/: mod.rs
src/api/routes/objects/: create.rs  mod.rs
src/api/routes/users/: login.rs  mod.rs  register.rs
src/models/: device.rs  mod.rs  object.rs  user.rs
src/services/: mod.rs
