[package]
name = "localstorage"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.3"}
tokio = {version = "1.44", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3"}
config = {version = "0.15"}
tower-http = {version = "0.6", features = ["cors"]}
surrealdb = {version = "2.2", features = ["kv-mem", "kv-rocksdb"]}
thiserror = {version = "2.0"}
bcrypt = {version = "0.17"}